<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/note_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginStart="@dimen/layout_margin"
        android:text="@string/default_note_title"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/note_title" />

    <TextView
        android:id="@+id/note_summary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="false"
        android:layout_alignParentStart="false"
        android:layout_below="@+id/note_title"
        android:layout_marginBottom="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_half_margin"
        android:text="@string/default_note_summary" />

    <TextView
        android:id="@+id/note_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="@dimen/layout_margin"
        android:layout_marginStart="@dimen/layout_margin"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_toEndOf="@+id/note_title"
        android:text="@string/default_note_date"
        android:textAlignment="viewEnd"
        android:textSize="@dimen/note_date" />

</RelativeLayout>