<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <ImageView
        android:id="@+id/food_place_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/layout_margin"
        android:contentDescription="@string/food_type_description"
        android:src="@drawable/ic_local_pizza_black_48dp" />

    <TextView
        android:id="@+id/food_place_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_toEndOf="@+id/food_place_type"
        android:text="@string/default_food_place_name"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/food_place_name" />

    <RatingBar
        android:id="@+id/food_rating_bar"
        style="@android:style/Widget.DeviceDefault.Light.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/food_place_name"
        android:layout_toEndOf="@+id/food_place_type"
        android:numStars="5"
        android:stepSize="0.1" />

    <TextView
        android:id="@+id/food_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/layout_margin"
        android:layout_toEndOf="@+id/food_place_name"
        android:text="@string/default_food_place_distance"
        android:textAlignment="viewEnd"
        android:textColor="@color/primaryTextColor"
        android:textSize="@dimen/food_place_distance" />
</RelativeLayout>